10.3.2001	osd rough edges <garetxe@users.sourceforge.net>

	* osd.c: No flicker even w/o XVideo, knows about showing/hiding
	the main window.

9.3.2001	Cleanup <mschimek@users.sourceforge.net>

	* Updated de.po

8.3.2001	Fullscreen <garetxe@users.sourceforge.net>

	* src/fullscreen: Added, holds the code for fullscreen mode. Added
	the hability to do OSD correctly in fullscreen without XVideo
	PutVideo.

4.3.2001	TTX subtitles gui <garetxe@users.sourceforge.net>

	* glade/zapping.glade: Added some provisional GUI for TTX
	subtitles, but thinking about better ways to do it.

3.3.2001	Network info <garetxe@users.sourceforge.net>

	* src/zvbi.c: Added network info dialog.
	* src/ttxview.c: Fixed a bug with with TTX restart.
	* glade/zapping.glade: Reorganized a bit the VBI properties to
	make the dialog take less space.

2.3.2001	VBI open/close <garetxe@users.sourceforge.net>

	* Made the vbi object notify clients (TTXView) about being closed,
	this allows for clean start/restart of TTX.
	* plugins/lirc: Bugfixes (one of them introduced by me ;-P)
	* libvbi/v4lx.c: Made it accept a given_fd parameter, rationale:
	guess_v4l tries to open a device to query state, let it know
	that we already own it (otherwise v4l1 drivers will refuse
	re-opening it). Now just fails for me reopening the vbi device under
	XVideo and v4l1, good enough i think.

1.3.2001	Lirc <garetxe@users.sourceforge.net>

	* plugins/lirc: Added infrared support, written by Marco
	Pfattner. Thanks a lot!

28.2.2001	zconfhook <garetxe@users.sourceforge.net>

	* zconf.c: Added gconfish notification mechanism, now the vbi
	device can be opened/closed using the properties dialog, V4L open
	fails.

27.2.2001	osd <mschimek@users.sourceforge.net>

	* osd.c: Pipe replaced fifo/timer event queue. Moved
	  rendering to exp_gfx.c, modified ttx render funcs
	  for Teletext overlay. Works nicely.

26.2.2001	TTX <mschimek@users.sourceforge.net>

	* Added VTX export module, rationale <http://alevt.listbot.com/