@@ -2,7 +2,7 @@ Thanks are due to the following people for helping with the program:
 
 - Christian Marillat: French translation
 - Edgar Toerning: AleVT, permission to use a derivative (libvbi) into Z.
-- Michael Schimek: Help with mp1e, vbi_decoder.c, de.po.
+- Michael Schimek: Help with mp1e, libvbi, de.po.
 - Sergey Nikulin: Russian translation and cyrillic TTX glyphs.
 - Eugene Crosser: Russian freq table.
 - Jeremy Maccelari: South African freq table.
@@ -11,5 +11,6 @@ Thanks are due to the following people for helping with the program:
 - Tim Powers: Patches to make it build and work under RH7 (for Fisher),
 	      fixes for the .spec.in file.
 - Marco Pfattner: LIRC plugin.
+- Carsten Menke: German translation of the main help file.
 
 And, of course, thanks to the people that sent bug reports and suggestions.
